# wastebin

./: CMakeLists.txt  LICENSE  bin.cpp
.github/workflows/: main.yml
binlib/: CMakeLists.txt  binlib.cpp  binlib.hpp  config.hpp.in
src/: CMakeLists.txt  bin.cpp  utils.cpp  utils.hpp  wastebin.cpp
src/tests/: test_utils.cpp
